contact form tweak

--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
                 </div>
             </nav>
 
-            <header id="fh5co-header" class="fh5co-cover cover-contact fh5co-cover-sm" role="banner" style="background-image: url(/img/Portfolio_067.jpg)">
+            <header id="fh5co-header" class="fh5co-cover cover-contact fh5co-cover-sm" role="banner" style="background-image: url(/img/Portfolio_062.jpg)">
                 <div class="overlay overlay-light"></div>
                 <div class="fh5co-container">
                     <div class="row">
@@ -150,7 +150,9 @@
                                 <br />
                                 <h3>Contact Information</h3>
                                 <ul>
-                                    <li class="address"><p>North Bay, Ontario</p></li>
+                                    <li class="address">
+                                        <p><a href="https://goo.gl/maps/WEJMCZGMTFSxvZ5Y6" target="_blank">North Bay, Ontario</a></p>
+                                    </li>
                                     <li class="phone">
                                         <p><a href="tel://7052032534">(705) 203-2534</a></p>
                                     </li>
@@ -171,19 +173,21 @@
                             </div>
                         </div>
                         <div class="col-md-7 animate-box">
-                            <!-- Contact Form!!!!!!!!! -->
+                            <!-- Contact Form -->
                             <form action="https://formspree.io/f/xyylwddn" method="POST">
                                 <div class="row form-group">
                                     <div class="col-md-6 col-12 d-md-none">
                                         <h3>Contact Form</h3>
                                     </div>
+                                    <input type="hidden" name="_subject" value="Contact Form Submission - forrestherman.ca" />
+
                                     <div class="col-md-6 inner-form-group">
                                         <label for="name1">Your Name *</label>
-                                        <input type="text" id="name1" name="name1" class="form-control" placeholder="Your Name" required="" />
+                                        <input type="text" id="name1" name="Name" class="form-control" placeholder="Your Name" required="" />
                                     </div>
                                     <div class="col-md-6 inner-form-group">
                                         <label for="name2">Your Partner's Name</label>
-                                        <input type="text" id="name2" name="name2" class="form-control" placeholder="Your Partner's Name" />
+                                        <input type="text" id="name2" name="PartnerName" class="form-control" placeholder="Your Partner's Name" />
                                     </div>
                                 </div>
 
