--- a/films.html
+++ b/films.html
@@ -152,7 +152,7 @@
                 <div class="row fh5co-section">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
                         <span>Wedding</span>
-                        <h2>Films</h2>
+                        <h2 class="portfolio">Films</h2>
                         <!-- <p>
 							Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
 							there live the blind texts.
