--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                 </div>
             </nav>
 
-            <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Couple_Engage_ErinMike_001.jpg)" data-stellar-background-ratio="0.5">
-                <!-- style="background-image: url(img/Couple_Engage_ErinMike_b&w_002.jpg)" -->
+            <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Portfolio_068.jpg)" data-stellar-background-ratio="0.5">
+                <!-- style="background-image: url(img/Couple_Engage_ErinMike_001.jpg)" -->
                 <div class="overlay-prep overlay-light"></div>
                 <!-- <div class="container">
                     <div class="row">
