--- a/photos.html
+++ b/photos.html
@@ -147,7 +147,7 @@
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
                             <span>Portraits</span>
-                            <h2>Portfolio</h2>
+                            <h2 class="portfolio">Portfolio</h2>
                             <!-- <p>
                                 Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
                                 there live the blind texts.
@@ -161,6 +161,7 @@
                                 <!-- col 1 -->
                                 <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_059.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_013.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_065.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_010.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-8"><img src="/img/Portfolio_030.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-11"><img src="/img/Portfolio_036.jpg" alt="" /></div>
@@ -172,6 +173,7 @@
                                 <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_058.jpg" alt="" /></div>
                                 <!-- col 2 -->
                                 <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_060.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_072.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_042.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-5"><img src="/img/Portfolio_009.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-9"><img src="/img/Portfolio_027.jpg" alt="" /></div>
@@ -183,6 +185,7 @@
                                 <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_016.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_017.jpg" alt="" /></div>
                                 <!-- col 3 -->
+                                <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_075.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_061.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-3"><img src="/img/Event_Mel_Wedding_001.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-6"><img src="/img/Portfolio_011.jpg" alt="" /></div>
