contact page update

--- a/contact.html
+++ b/contact.html
@@ -119,14 +119,14 @@
                 </div>
             </nav>
 
-            <header id="fh5co-header" class="fh5co-cover cover-contact fh5co-cover-sm" role="banner" style="background-image: url(/img/Portfolio_069.jpg)">
+            <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image: url(/img/Portfolio_077.jpg); background-position: center 60% !important">
                 <div class="overlay overlay-light"></div>
                 <div class="fh5co-container">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
                             <div class="display-t">
-                                <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                                    <h1>Get in Touch!</h1>
+                                <div class="display-tc animate-box" style="vertical-align: bottom" data-animate-effect="fadeIn">
+                                    <h2 class="portfolio">Get in Touch!</h2>
                                     <!-- <h2>Free HTML5 templates Made by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></h2> -->
                                 </div>
                             </div>
