update to share photos and links

--- a/contact.html
+++ b/contact.html
@@ -16,15 +16,12 @@
         <meta name="keywords" content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
 
         <!-- Facebook and Twitter integration -->
-        <meta property="og:title" content="Forrest Herman - Wedding Photographer + Filmmaker" />
-        <meta property="og:image" content="img/Couple_Engage_ErinMike_001.jpg" />
-        <meta property="og:url" content="https://www.forrestherman.ca/" />
+        <meta property="og:title" content="Contact - Forrest Herman - Wedding Photographer + Filmmaker" />
+        <meta property="og:image" content="img/Portfolio_068.jpg" />
+        <meta property="og:url" content="https://www.forrestherman.ca/contact" />
         <meta property="og:site_name" content="ForrestHerman.ca" />
         <meta property="og:description" content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
-        <meta name="twitter:title" content="" />
-        <meta name="twitter:image" content="img/Couple_Engage_ErinMike_001.jpg" />
-        <meta name="twitter:url" content="" />
-        <meta name="twitter:card" content="" />
+
         <!-- Pinterest -->
         <meta name="p:domain_verify" content="c4b5730c61a16c84e09c3bbf2e419c05" />
 
