--- a/offerings.html
+++ b/offerings.html
@@ -16,7 +16,7 @@
         <meta name="keywords" content="photo, film, wedding, wedding photography, photography, filmmaking, couple photos, photos" />
 
         <!-- Facebook and Twitter integration -->
-        <meta property="og:title" content="Forrest Herman - Wedding Photographer + Filmmaker" />
+        <meta property="og:title" content="Offerings - Forrest Herman - Wedding Photographer + Filmmaker" />
         <meta property="og:image" content="img/Couple_Engage_ErinMike_001.jpg" />
         <meta property="og:url" content="https://www.forrestherman.ca/" />
         <meta property="og:site_name" content="ForrestHerman.ca" />
