--- a/index.html
+++ b/index.html
@@ -129,20 +129,6 @@
             <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Portfolio_068.jpg)" data-stellar-background-ratio="0.5">
                 <!-- style="background-image: url(img/Couple_Engage_ErinMike_001.jpg)" -->
                 <div class="overlay-prep overlay-light"></div>
-                <!-- <div class="container">
-                    <div class="row">
-                        <div class="col-md-8 col-md-offset-2 text-center">
-                            <div class="display-t">
-                                <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                                    <h1>Joefrey &amp; Sheila</h1>
-                                    <h2>We Are Getting Married</h2>
-                                    <div class="simply-countdown simply-countdown-one"></div>
-                                    <p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
             </header>
 
             <div id="fh5co-couple" class="fh5co-section-gray">
@@ -170,177 +156,9 @@
                                 <a class="btn" href="about">More about me</a>
                             </div>
                         </div>
-                        <!-- <div class="col-sm-1"></div> -->
                     </div>
-                    <!-- <div class="couple-wrap animate-box">
-                        <div class="couple-half">
-                            <div class="groom">
-                                <img src="images/groom.jpg" alt="groom" class="img-responsive" />
-                            </div>
-                            <div class="desc-groom">
-                                <h3>Joefrey Mahusay</h3>
-                                <p>
-                                    Far far away, behind the word mountains, far from the countries Vokalia and
-                                    Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-                                </p>
-                            </div>
-                        </div>
-                        <p class="heart text-center"><i class="icon-heart2"></i></p>
-                        <div class="couple-half">
-                            <div class="bride">
-                                <img src="images/bride.jpg" alt="groom" class="img-responsive" />
-                            </div>
-                            <div class="desc-bride">
-                                <h3>Sheila Mahusay</h3>
-                                <p>
-                                    Far far away, behind the word mountains, far from the countries Vokalia and
-                                    Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-                                </p>
-                            </div>
-                        </div>
-                    </div> -->
                 </div>
             </div>
-
-            <!-- <div id="fh5co-event" class="fh5co-bg" style="background-image: url(img/Couple_ErinMike_Banner_001.jpg)">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                            <span>Our Special Events</span>
-                            <h2>Wedding Events</h2>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="display-t">
-                            <div class="display-tc">
-                                <div class="col-md-10 col-md-offset-1">
-                                    <div class="col-md-6 col-sm-6 text-center">
-                                        <div class="event-wrap animate-box">
-                                            <h3>Main Ceremony</h3>
-                                            <div class="event-col">
-                                                <i class="icon-clock"></i>
-                                                <span>4:00 PM</span>
-                                                <span>6:00 PM</span>
-                                            </div>
-                                            <div class="event-col">
-                                                <i class="icon-calendar"></i>
-                                                <span>Monday 28</span>
-                                                <span>November, 2016</span>
-                                            </div>
-                                            <p>
-                                                Far far away, behind the word mountains, far from the countries Vokalia
-                                                and Consonantia, there live the blind texts. Separated they live in
-                                                Bookmarksgrove right at the coast of the Semantics, a large language
-                                                ocean.
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 text-center">
-                                        <div class="event-wrap animate-box">
-                                            <h3>Wedding Party</h3>
-                                            <div class="event-col">
-                                                <i class="icon-clock"></i>
-                                                <span>7:00 PM</span>
-                                                <span>12:00 AM</span>
-                                            </div>
-                                            <div class="event-col">
-                                                <i class="icon-calendar"></i>
-                                                <span>Monday 28</span>
-                                                <span>November, 2016</span>
-                                            </div>
-                                            <p>
-                                                Far far away, behind the word mountains, far from the countries Vokalia
-                                                and Consonantia, there live the blind texts. Separated they live in
-                                                Bookmarksgrove right at the coast of the Semantics, a large language
-                                                ocean.
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-
-            <!-- <div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image: url(images/img_bg_5.jpg)">
-                <div class="overlay"></div>
-                <div class="container">
-                    <div class="row">
-                        <div class="display-t">
-                            <div class="display-tc">
-                                <div class="col-md-3 col-sm-6 animate-box">
-                                    <div class="feature-center">
-                                        <span class="icon">
-                                            <i class="icon-users"></i>
-                                        </span>
-
-                                        <span
-                                            class="counter js-counter"
-                                            data-from="0"
-                                            data-to="500"
-                                            data-speed="5000"
-                                            data-refresh-interval="50"
-                                            >1</span
-                                        >
-                                        <span class="counter-label">Estimated Guest</span>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 col-sm-6 animate-box">
-                                    <div class="feature-center">
-                                        <span class="icon">
-                                            <i class="icon-user"></i>
-                                        </span>
-
-                                        <span
-                                            class="counter js-counter"
-                                            data-from="0"
-                                            data-to="1000"
-                                            data-speed="5000"
-                                            data-refresh-interval="50"
-                                            >1</span
-                                        >
-                                        <span class="counter-label">We Catter</span>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 col-sm-6 animate-box">
-                                    <div class="feature-center">
-                                        <span class="icon">
-                                            <i class="icon-calendar"></i>
-                                        </span>
-                                        <span
-                                            class="counter js-counter"
-                                            data-from="0"
-                                            data-to="402"
-                                            data-speed="5000"
-                                            data-refresh-interval="50"
-                                            >1</span
-                                        >
-                                        <span class="counter-label">Events Done</span>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 col-sm-6 animate-box">
-                                    <div class="feature-center">
-                                        <span class="icon">
-                                            <i class="icon-clock"></i>
-                                        </span>
-
-                                        <span
-                                            class="counter js-counter"
-                                            data-from="0"
-                                            data-to="2345"
-                                            data-speed="5000"
-                                            data-refresh-interval="50"
-                                            >1</span
-                                        >
-                                        <span class="counter-label">Hours Spent</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
 
             <div id="fh5co-testimonial">
                 <div class="container">
@@ -456,7 +274,7 @@
                                 <div class="col-md-10 feature-copy">
                                     <h3>Proffessional Headshots</h3>
                                     <p>
-                                        Ideal for those who are serious about their professionalism and corporate appearance. A studio headshot guarantees that you will stand out among the rest.
+                                        Ideal for those who are serious about their professionalism and corporate appearance. A quality headshot guarantees that you will stand out among the rest.
                                         <!-- Includes one wardrobe change. -->
                                     </p>
                                     <p><a href="contact">Let's talk</a></p>
@@ -507,7 +325,7 @@
                 </div>
             </div>
 
-            <!-- Timeline!!!!!!!!!!!!!!!!!!!! ------------------------------- -->
+            <!-- Timeline!  ------------------------------- -->
             <!-- <div id="fh5co-couple-story">
                 <div class="container">
                     <div class="row">
@@ -572,39 +390,6 @@
                     <div include-html="callout_insta.html"></div>
                 </div>
             </div>
-
-            <!-- <div id="fh5co-started" class="fh5co-bg" style="background-image: url(img/Couple_ErinMike_Banner_001.jpg)">
-                <div class="overlay"></div>
-                <div class="container">
-                    <div class="row animate-box">
-                        <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-                            <h2>Get in touch!</h2>
-                            <p>Please fill out your details. Thanks.</p>
-                        </div>
-                    </div>
-                    <div class="row animate-box">
-                        <div class="col-md-10 col-md-offset-1">
-                            <form class="form-inline">
-                                <div class="col-md-4 col-sm-4">
-                                    <div class="form-group">
-                                        <label for="name" class="sr-only">Name</label>
-                                        <input type="name" class="form-control" id="name" placeholder="Name" />
-                                    </div>
-                                </div>
-                                <div class="col-md-4 col-sm-4">
-                                    <div class="form-group">
-                                        <label for="email" class="sr-only">Email</label>
-                                        <input type="email" class="form-control" id="email" placeholder="Email" />
-                                    </div>
-                                </div>
-                                <div class="col-md-4 col-sm-4">
-                                    <button type="submit" class="btn btn-default btn-block">Submit</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
 
             <!-- Footer -->
             <div include-html="footer.html"></div>
