--- a/footer.html
+++ b/footer.html
@@ -41,6 +41,14 @@
                         </div>
                     </div> -->
     <div class="container">
+        <div class="footer-logo img-container flex-col align-items-center justify-center" style="margin-bottom: 30px">
+            <p style="margin-bottom: -30px; z-index: 10">LGBTQ+ affirming. BIPOC lives matter. All are welcome &#10084;</p>
+            <img
+                style="max-width: 400px"
+                src="https://blush.design/api/download?shareUri=y_TRIn14rWFYlZu9&c=Bottom_0%7E393f82-0.1%7E393f82-0.2%7E89c5cc_Hair_0%7E4a312c-0.1%7E2c1b18-0.2%7E181658_Skin_0%7Ed4a181-0.1%7E915b3c-0.2%7Eb28b67_Top_0%7E43d26c-0.1%7Ef2f2f2-0.2%7Effa434&bg=fdfbf7&w=800&h=800&fm=png"
+                alt=""
+            />
+        </div>
         <div class="footer-logo img-container display-flex-row justify-center">
             <a href="index">
                 <img id="footer-logo" src="img/forrest-herman-black.png" alt="logo" />
