updated portfolio and small menu and footer tweaks

--- a/footer.html
+++ b/footer.html
@@ -41,7 +41,7 @@
                         </div>
                     </div> -->
     <div class="container">
-        <div class="footer-logo img-container flex-col align-items-center justify-center" style="margin-bottom: 30px">
+        <div class="footer-logo img-container flex-col align-items-center justify-center text-center" style="margin-bottom: 30px">
             <p style="margin-bottom: -30px; z-index: 10">LGBTQ+ affirming. BIPOC lives matter. All are welcome &#10084;</p>
             <img
                 style="max-width: 400px"
