--- a/offerings.html
+++ b/offerings.html
@@ -90,16 +90,16 @@
         <div class="fh5co-loader"></div>
 
         <div id="page">
-            <!-- ****************************************** Black Nav ****************************************** -->
+            <!-- ****************************************** White Nav ****************************************** -->
 
             <nav id="navbar" class="fh5co-nav" role="navigation">
                 <!-- <div class="overlay-prep" style="background: rgba(0, 0, 0, 0.4)"></div> -->
                 <div class="container">
-                    <div id="nav" class="row nav nav-black">
+                    <div id="nav" class="row nav nav-white">
                         <div class="col-xs-2 col-nav">
                             <div id="fh5co-logo">
                                 <a href="index">
-                                    <img id="logo" src="img/forrest-herman-black.png" alt="logo" />
+                                    <img id="logo" src="img/forrest-herman-white.png" alt="logo" />
                                 </a>
                             </div>
                         </div>
@@ -251,7 +251,7 @@
             </div>
 
             <!-- Insta Callout -->
-            <div id="fh5co-started" class="fh5co-bg" style="background-image: url(img/Couple_ErinMike_Banner_001.jpg)">
+            <div id="fh5co-started" class="fh5co-bg" style="background-image: url(img/instagram_banner.jpg)">
                 <div class="overlay"></div>
                 <div class="animate-box">
                     <div include-html="callout_insta.html"></div>
