--- a/photos.html
+++ b/photos.html
@@ -160,9 +160,10 @@
                             <div class="wrapper-3-col animate-box">
                                 <!-- col 1 -->
                                 <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_059.jpg" alt="" /></div>
-                                <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_013.jpg" alt="" /></div>
-                                <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_065.jpg" alt="" /></div>
-                                <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_010.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-3"><img src="/img/Portfolio_060.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_013.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-6"><img src="/img/Portfolio_065.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-5"><img src="/img/Portfolio_010.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-8"><img src="/img/Portfolio_030.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-11"><img src="/img/Portfolio_036.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-14"><img src="/img/Portfolio_035.jpg" alt="" /></div>
@@ -172,9 +173,10 @@
                                 <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_008.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_058.jpg" alt="" /></div>
                                 <!-- col 2 -->
-                                <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_060.jpg" alt="" /></div>
-                                <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_072.jpg" alt="" /></div>
-                                <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_042.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_084.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_079.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-7"><img src="/img/Portfolio_072.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-8"><img src="/img/Portfolio_042.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-5"><img src="/img/Portfolio_009.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-9"><img src="/img/Portfolio_027.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-12"><img src="/img/Portfolio_034.jpg" alt="" /></div>
@@ -185,9 +187,10 @@
                                 <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_016.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_017.jpg" alt="" /></div>
                                 <!-- col 3 -->
-                                <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_075.jpg" alt="" /></div>
-                                <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_061.jpg" alt="" /></div>
-                                <div class="portfolio-img-container order-md-3"><img src="/img/Event_Mel_Wedding_001.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_080.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-3"><img src="/img/Portfolio_075.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_061.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-5"><img src="/img/Event_Mel_Wedding_001.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-6"><img src="/img/Portfolio_011.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-10"><img src="/img/Portfolio_053.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-13"><img src="/img/Portfolio_038.jpg" alt="" /></div>
@@ -324,7 +327,7 @@
             </div>
 
             <!-- Insta Callout -->
-            <div id="fh5co-started" class="fh5co-bg" style="background-image: url(img/Couple_ErinMike_Banner_001.jpg)">
+            <div id="fh5co-started" class="fh5co-bg" style="background-image: url(img/instagram_banner.jpg)">
                 <div class="overlay"></div>
                 <div class="animate-box">
                     <div include-html="callout_insta.html"></div>
