--- a/contact.html
+++ b/contact.html
@@ -345,7 +345,7 @@
             </script> -->
 
             <!-- Insta Callout -->
-            <div id="fh5co-started" class="fh5co-bg" style="background-image: url(img/Couple_ErinMike_Banner_001.jpg)">
+            <div id="fh5co-started" class="fh5co-bg" style="background-image: url(img/instagram_banner.jpg)">
                 <div class="overlay"></div>
                 <div class="animate-box">
                     <div include-html="callout_insta.html"></div>
