--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
         <!-- Icomoon Icon Fonts-->
         <link rel="stylesheet" href="css/icomoon.css" />
+
         <!-- Bootstrap  -->
         <link rel="stylesheet" href="css/bootstrap.css" />
 
@@ -126,10 +127,35 @@
                 </div>
             </nav>
 
-            <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Portfolio_068.jpg)" data-stellar-background-ratio="0.5">
-                <!-- style="background-image: url(img/Couple_Engage_ErinMike_001.jpg)" -->
+            <!-- <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Portfolio_068.jpg)" data-stellar-background-ratio="0.5">
                 <div class="overlay-prep overlay-light"></div>
-            </header>
+            </header> -->
+
+            <!-- hero slider -->
+            <div id="heroslider" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel item active">
+                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Portfolio_068.jpg)" data-stellar-background-ratio="0.5">
+                            <div class="overlay-prep overlay-light"></div>
+                        </header>
+                    </div>
+                    <div class="carousel item">
+                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Couple_Engage_ErinMike_001.jpg)" data-stellar-background-ratio="0.5">
+                            <div class="overlay-prep overlay-light"></div>
+                        </header>
+                    </div>
+                    <div class="carousel item">
+                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Portfolio_077.jpg)" data-stellar-background-ratio="0.5">
+                            <div class="overlay-prep overlay-light"></div>
+                        </header>
+                    </div>
+                    <div class="carousel item">
+                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Portfolio_076.jpg)" data-stellar-background-ratio="0.5">
+                            <div class="overlay-prep overlay-light"></div>
+                        </header>
+                    </div>
+                </div>
+            </div>
 
             <div id="fh5co-couple" class="fh5co-section-gray">
                 <div class="container container-max-width-970">
@@ -486,6 +512,7 @@
         <script src="js/jquery.easing.1.3.js"></script>
         <!-- Bootstrap -->
         <script src="js/bootstrap.min.js"></script>
+
         <!-- Waypoints -->
         <script src="js/jquery.waypoints.min.js"></script>
         <!-- Carousel -->
