--- a/offerings.html
+++ b/offerings.html
@@ -164,7 +164,7 @@
                         </div>
                         <div class="col-md-7 order-md-1 text-center fh5co-heading fh5co-heading-sm animate-box">
                             <h2 style="text-transform: uppercase">Weddings + Elopements</h2>
-                            <p>Packages begin at $500</p>
+                            <p>Packages begin at $800</p>
                             <!-- <p>Elopement packages begin at $500 and Wedding Packages begin at $1000</p> -->
                             <p style="color: black; font-style: normal">
                                 I offer a variety of wedding packages varying from adventurous elopements, to larger events. Whether you're throwing a small intimate backyard weddings or taking over
@@ -190,7 +190,7 @@
                             </div>
                         </div>
                         <div class="img-container animate-box">
-                            <img src="/img/Portfolio_010.jpg" alt="" />
+                            <img src="/img/landscape_003.jpg" alt="" />
                         </div>
                     </div>
                 </div>
