--- a/photos.html
+++ b/photos.html
@@ -159,7 +159,9 @@
                         <div class="row gallery">
                             <div class="wrapper-3-col animate-box">
                                 <!-- col 1 -->
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_001.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_059.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/landscape_004.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-3"><img src="/img/Portfolio_060.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_013.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-6"><img src="/img/Portfolio_065.jpg" alt="" /></div>
@@ -174,7 +176,9 @@
                                 <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_058.jpg" alt="" /></div>
                                 <!-- col 2 -->
                                 <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_084.jpg" alt="" /></div>
-                                <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_079.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_005.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/landscape_003.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_002.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-7"><img src="/img/Portfolio_072.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-8"><img src="/img/Portfolio_042.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-5"><img src="/img/Portfolio_009.jpg" alt="" /></div>
@@ -187,9 +191,11 @@
                                 <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_016.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_017.jpg" alt="" /></div>
                                 <!-- col 3 -->
-                                <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_080.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_004.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-3"><img src="/img/Portfolio_075.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/landscape_001.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_061.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_003.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-5"><img src="/img/Event_Mel_Wedding_001.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-6"><img src="/img/Portfolio_011.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-10"><img src="/img/Portfolio_053.jpg" alt="" /></div>
