--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
             <div id="heroslider" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel item active">
+                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_001.jpg); background-position: 50% 17% !important">
+                            <div class="overlay-prep overlay-light"></div>
+                        </header>
+                    </div>
+                    <div class="carousel item">
                         <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Portfolio_068.jpg)" data-stellar-background-ratio="0.5">
                             <div class="overlay-prep overlay-light"></div>
                         </header>
