--- a/index.html
+++ b/index.html
@@ -259,7 +259,9 @@
                             <div class="feature-left animate-box order-1" data-animate-effect="fadeInLeft">
                                 <div class="col-md-2">
                                     <span class="icon">
-                                        <i class="fas fa-images"></i>
+                                        <i class="" style="font-size: 16px">
+                                            <img src="img/ring-icon.svg" style="width: 83%" alt="" />
+                                        </i>
                                     </span>
                                 </div>
                                 <div class="col-md-10 feature-copy">
