--- a/index.html
+++ b/index.html
@@ -229,14 +229,36 @@
                                         <div class="item">
                                             <div class="testimony-slide active text-center">
                                                 <figure>
+                                                    <img class="testimonial-img" style="object-position: center center" src="img/landscape_004.jpg" alt="user" />
+                                                </figure>
+                                                <span>Alex & Sarah</span>
+                                                <blockquote>
+                                                    <p>
+                                                        Forrest randomly approached us one evening at the beach and wanted to take some shots of us for free so he could practice his already great
+                                                        skill. That night he sent them to me and they were phenomenal.
+                                                    </p>
+                                                    <p>
+                                                        The universe blessed us with a wonderful energetic photographer because it just so happens I was planning a proposal in the near future. We
+                                                        communicated and discussed on how it was all going to go down and even visited the location beforehand.
+                                                    </p>
+                                                    <p>
+                                                        That evening was magical for both of us including Forrest. I'm very glad I had met him that night down at the beach because he made this
+                                                        proposal perfect and did an incredible job capturing the moment. I can't thank him enough!
+                                                    </p>
+                                                </blockquote>
+                                            </div>
+                                        </div>
+                                        <!-- <div class="item">
+                                            <div class="testimony-slide active text-center">
+                                                <figure>
                                                     <img class="testimonial-img" style="object-position: center -40px" src="img/Portfolio_009.jpg" alt="user" />
                                                 </figure>
                                                 <span>Erin & Michael</span>
                                                 <blockquote>
-                                                    <!-- <p>"Template"</p> -->
+                                                    <p>"Template"</p>
                                                 </blockquote>
                                             </div>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
