--- a/photos.html
+++ b/photos.html
@@ -160,6 +160,7 @@
                             <div class="wrapper-3-col animate-box">
                                 <!-- col 1 -->
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_001.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_009.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_059.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/landscape_004.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-3"><img src="/img/Portfolio_060.jpg" alt="" /></div>
@@ -177,6 +178,7 @@
                                 <!-- col 2 -->
                                 <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_084.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_005.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_008.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/landscape_003.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_002.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-7"><img src="/img/Portfolio_072.jpg" alt="" /></div>
@@ -192,6 +194,7 @@
                                 <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_017.jpg" alt="" /></div>
                                 <!-- col 3 -->
                                 <div class="portfolio-img-container order-md-1"><img src="/img/portrait_004.jpg" alt="" /></div>
+                                <div class="portfolio-img-container order-md-1"><img src="/img/portrait_007.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-3"><img src="/img/Portfolio_075.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/landscape_001.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_061.jpg" alt="" /></div>
