--- a/photos.html
+++ b/photos.html
@@ -22,7 +22,7 @@
         <meta property="og:site_name" content="ForrestHerman.ca" />
         <meta property="og:description" content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
         <meta name="twitter:title" content="" />
-        <meta name="twitter:image" content="img/Couple_Engage_ErinMike_001.jpg" />
+        <meta name="twitter:image" content="" />
         <meta name="twitter:url" content="" />
         <meta name="twitter:card" content="" />
         <!-- Pinterest -->
