--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
         <!-- Facebook and Twitter integration -->
         <meta property="og:title" content="About - Forrest Herman - Wedding Photographer + Filmmaker" />
-        <meta property="og:image" content="img/Couple_Engage_ErinMike_001.jpg" />
+        <meta property="og:image" content="img/share-img-2.jpg" />
         <meta property="og:url" content="https://www.forrestherman.ca/" />
         <meta property="og:site_name" content="ForrestHerman.ca" />
         <meta property="og:description" content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
