--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         </header>
                     </div>
                     <div class="carousel item">
-                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_008.jpg); background-position: 50% 70% !important">
+                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/landscape_008.jpg); background-position: 52% 70% !important">
                             <div class="overlay-prep overlay-light"></div>
                         </header>
                     </div>
@@ -156,7 +156,7 @@
                         </header>
                     </div>
                     <div class="carousel item">
-                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Portfolio_068.jpg)" data-stellar-background-ratio="0.5">
+                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Portfolio_068.jpg); background-position: 46% 10% !important">
                             <div class="overlay-prep overlay-light"></div>
                         </header>
                     </div>
@@ -166,7 +166,7 @@
                         </header>
                     </div>
                     <div class="carousel item">
-                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Portfolio_076.jpg)" data-stellar-background-ratio="0.5">
+                        <header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image: url(img/Portfolio_076.jpg); background-position: 50% 25% !important">
                             <div class="overlay-prep overlay-light"></div>
                         </header>
                     </div>
@@ -176,6 +176,65 @@
                         </header>
                     </div>
                 </div>
+                <a class="carousel-control left" href="#heroslider" role="button" data-slide="prev">
+                    <!-- <span class="carousel-control icon-prev" aria-hidden="true"></span> -->
+
+                    <svg class="hero-slider-carousel-arrows left" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 172 172" style="fill: #000000">
+                        <g
+                            fill="none"
+                            fill-rule="nonzero"
+                            stroke="none"
+                            stroke-width="1"
+                            stroke-linecap="butt"
+                            stroke-linejoin="miter"
+                            stroke-miterlimit="10"
+                            stroke-dasharray=""
+                            stroke-dashoffset="0"
+                            font-family="none"
+                            font-weight="none"
+                            font-size="none"
+                            text-anchor="none"
+                            style="mix-blend-mode: normal"
+                        >
+                            <path d="M0,172v-172h172v172z" fill="none"></path>
+                            <g fill="#ffffff">
+                                <path
+                                    d="M41.13219,48.11969c-0.88687,0.05375 -1.72,0.44344 -2.32469,1.10188l-35.31375,36.77844l35.31375,36.77844c0.84656,0.90031 2.10969,1.27656 3.30563,0.98094c1.19594,-0.29563 2.15,-1.20938 2.48594,-2.39188c0.34937,-1.19594 0.02687,-2.4725 -0.84656,-3.34594l-27.42594,-28.58156h148.79344c1.23625,0.01344 2.39188,-0.63156 3.02344,-1.70656c0.61813,-1.075 0.61813,-2.39187 0,-3.46687c-0.63156,-1.075 -1.78719,-1.72 -3.02344,-1.70656h-148.79344l27.42594,-28.58156c1.00781,-1.00781 1.29,-2.52625 0.69875,-3.81625c-0.57781,-1.30344 -1.89469,-2.10969 -3.31906,-2.0425z"
+                                ></path>
+                            </g>
+                        </g>
+                    </svg>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control right" href="#heroslider" role="button" data-slide="next">
+                    <!-- <span class="carousel-control icon-next" aria-hidden="true"></span> -->
+                    <svg class="hero-slider-carousel-arrows right" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50" viewBox="0 0 172 172" style="fill: #000000">
+                        <g
+                            fill="none"
+                            fill-rule="nonzero"
+                            stroke="none"
+                            stroke-width="1"
+                            stroke-linecap="butt"
+                            stroke-linejoin="miter"
+                            stroke-miterlimit="10"
+                            stroke-dasharray=""
+                            stroke-dashoffset="0"
+                            font-family="none"
+                            font-weight="none"
+                            font-size="none"
+                            text-anchor="none"
+                            style="mix-blend-mode: normal"
+                        >
+                            <path d="M0,172v-172h172v172z" fill="none"></path>
+                            <g fill="#ffffff">
+                                <path
+                                    d="M130.84094,48.11969c-1.3975,-0.02687 -2.67406,0.80625 -3.23844,2.08281c-0.55094,1.29 -0.26875,2.78156 0.71219,3.77594l27.43938,28.58156h-148.79344c-1.23625,-0.01344 -2.39188,0.63156 -3.01,1.70656c-0.63156,1.075 -0.63156,2.39187 0,3.46687c0.61812,1.075 1.77375,1.72 3.01,1.70656h148.79344l-27.43938,28.58156c-1.31687,1.37062 -1.26312,3.5475 0.1075,4.86437c1.37063,1.31688 3.5475,1.27656 4.86438,-0.1075l35.31375,-36.77844l-35.31375,-36.77844c-0.63156,-0.68531 -1.51844,-1.075 -2.44563,-1.10188z"
+                                ></path>
+                            </g>
+                        </g>
+                    </svg>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
 
             <div id="fh5co-couple" class="fh5co-section-gray">
@@ -304,7 +363,9 @@
                                 </div>
                                 <div class="col-md-10 feature-copy">
                                     <h3>Weddings + Elopements</h3>
-                                    <p style="margin-bottom: 10px">My wedding packages begin at $800. This includes a full day's worth of photo-journalism coverage.</p>
+                                    <p style="margin-bottom: 10px">
+                                        My wedding packages begin at $800. Packages range from just a few hours to a full day's worth of photo-journalism coverage. Contact me for a custom quote.
+                                    </p>
                                     <p><a href="offerings#wedding-elopement">Explore packages</a></p>
                                 </div>
                             </div>
@@ -324,7 +385,7 @@
                             <div class="feature-left animate-box order-3" data-animate-effect="fadeInLeft">
                                 <div class="col-md-2">
                                     <span class="icon">
-                                        <i class="fas fa-video"></i>
+                                        <i class="fas fa-film"></i>
                                     </span>
                                 </div>
                                 <div class="col-md-10 feature-copy">
