contact page banner update

--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
                 </div>
             </nav>
 
-            <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image: url(/img/Portfolio_077.jpg); background-position: center 60% !important">
+            <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image: url(/img/instagram_banner_2.jpg); background-position: 45% 60% !important">
                 <div class="overlay overlay-light"></div>
                 <div class="fh5co-container">
                     <div class="row">
