--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Forrest Herman &ndash; Wedding Photographer + Filmmaker</title>
-        <link rel="icon" href="img/fh-white.png" id="light-scheme-icon" />
+        <link rel="icon" href="img/favicon.png" id="light-scheme-icon" />
         <!-- <link rel="icon" href="img/fh-black.png" id="dark-scheme-icon" /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Wedding Photographer + Filmmaker in North Bay, ON. Capturing visuals as timeless as your memories." />
