share-image for non og

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
         <!-- Facebook and Twitter integration -->
         <meta property="og:title" content="Forrest Herman - Wedding Photographer + Filmmaker" />
         <meta property="og:image" content="img/share-img-2.jpg" />
+        <link rel="image_src" href="img/share-img-2.jpg" />
         <meta property="og:url" content="https://www.forrestherman.ca/" />
         <meta property="og:site_name" content="ForrestHerman.ca" />
         <meta property="og:description" content="I'm a wedding photographer and filmmaker based in North Bay, ON. Capturing moments and memories. Weddings, engagements, events." />
         <meta name="twitter:title" content="" />
-        <meta name="twitter:image" content="" />
+        <meta name="twitter:image" content="img/share-img-2.jpg" />
         <meta name="twitter:url" content="" />
         <meta name="twitter:card" content="" />
+
         <!-- Pinterest -->
         <meta name="p:domain_verify" content="c4b5730c61a16c84e09c3bbf2e419c05" />
 
