--- a/contact.html
+++ b/contact.html
@@ -280,7 +280,7 @@
                                             <option value="Facebook">Facebook</option>
                                             <option value="Instagram">Instagram</option>
                                             <option value="Ad">Ad</option>
-                                            <option value="Refferal">Referral (please specify)</option>
+                                            <option value="Referral">Referral (please specify)</option>
                                             <option value="other">Other (please specify)</option>
                                         </select>
                                     </div>
