--- a/contact.html
+++ b/contact.html
@@ -301,7 +301,7 @@
                                 </div> -->
 
                                 <div class="form-group">
-                                    <p>Thank you for reaching out! I will get back to you within 24 hours.</p>
+                                    <p>Thank you for reaching out! I will get back to you within 24-48 hours.</p>
                                 </div>
 
                                 <div class="form-group">
