--- a/contact.html
+++ b/contact.html
@@ -204,45 +204,45 @@
 
                                 <div class="row form-group">
                                     <div class="col-md-12">
-                                        <label for="subject">Instagram — Let's follow each other!</label>
+                                        <label for="instagram">Instagram — Let's follow each other!</label>
                                         <input type="text" id="instagram" name="instagram" class="form-control" placeholder="@your-instagram-handle" />
                                     </div>
                                 </div>
 
                                 <div class="row form-group">
                                     <div class="col-md-12">
-                                        <label for="subject">Do you have a date in mind?</label>
+                                        <label for="date">Do you have a date in mind?</label>
                                         <input type="text" id="date" name="date" class="form-control" placeholder="Enter a date (DD/MM/YYYY) or a range of dates that work for you" />
                                     </div>
                                 </div>
 
                                 <div class="row form-group">
                                     <div class="col-md-12">
-                                        <label for="subject">Do you have a location in mind? If not it's okay to leave blank!</label>
+                                        <label for="location">Do you have a location in mind? If not it's okay to leave blank!</label>
                                         <input type="text" id="location" name="location" class="form-control" placeholder="Enter location here" />
                                     </div>
                                 </div>
 
                                 <div class="row form-group">
                                     <div class="col-md-12">
-                                        <label for="subject">3 words to describe the vibe. (You can also link a Pinterest mood board!)</label>
+                                        <label for="vibe">3 words to describe the vibe. (You can also link a Pinterest mood board!)</label>
                                         <input type="text" id="vibe" name="vibe" class="form-control" placeholder="adventure, cozy, romantic, fairytale, summer rainstorm, polaroid, etc." />
                                     </div>
                                 </div>
 
                                 <div class="row form-group">
                                     <div class="col-md-12">
-                                        <label for="message">Session Type *</label>
+                                        <label for="session_type">Session Type *</label>
                                         <select name="session_type" id="session_type" class="form-control" required="">
                                             <option value="Select" selected="" disabled="">Select</option>
                                             <option value="Wedding or Elopement Photography">Wedding / Elopement - Photography</option>
                                             <option value="Wedding or Elopement Film">Wedding / Elopement - Film</option>
                                             <option value="Engagement / Proposal">Engagement / Proposal</option>
-                                            <option value="Family Session">Couple Session</option>
+                                            <option value="Couple Session">Couple Session</option>
                                             <option value="Family Session">Family Session</option>
                                             <option value="Event or Celebration">Event</option>
-                                            <option value="Event or Celebration">Professional Headshots</option>
-                                            <option value="Event or Celebration">Business Inquiry</option>
+                                            <option value="Professional Headshots">Professional Headshots</option>
+                                            <option value="Business Inquiry">Business Inquiry</option>
                                             <option value="other">Other (Please describe below)</option>
                                         </select>
                                         <p style="margin-bottom: 0px"><a href="offerings" target="_blank">Explore packages</a></p>
@@ -273,7 +273,7 @@
 
                                 <div class="row form-group">
                                     <div class="col-md-12">
-                                        <label for="message">How did you hear about me? *</label>
+                                        <label for="found_me">How did you hear about me? *</label>
                                         <select name="found_me" id="found_me" class="form-control" required="">
                                             <option value="Select" selected="" disabled="">Select</option>
                                             <option value="Google">Google</option>
@@ -288,7 +288,7 @@
 
                                 <div class="row form-group">
                                     <div class="col-md-12">
-                                        <label for="subject">If selected 'Referral' or 'Other' above, please specify who or what. Thanks!</label>
+                                        <label for="referral">If selected 'Referral' or 'Other' above, please specify who or what. Thanks!</label>
                                         <input type="text" id="referral" name="referral" class="form-control" placeholder="Name of person who referred you to me or other source" />
                                     </div>
                                 </div>
